done.scss
@import "lib/bourbon/bourbon";

// Variables
$color-dark:  #333;
$color-mid:   #777;
$color-light: #f0f0f0;
$block-background: rgba(black, 0.5);

$font-size-base: 18px;
$font-size-small: 0.75em;

$font-family-base: "avenir next", "helvetica neue", helvetica, arial, sans-serif;

$input-height: 3em;

// Mixins and extends
@mixin breakpoint-small {
  @media (max-width : 480px) {
    @content;
  }
}

%container {
  width: 50%;
  margin: 0 auto;
  max-width: 600px;
}

// Icons
@include font-face("icons", "/fonts/done");

[data-icon] {
  &::before {
    font-family: "icons" !important;
    font-style: normal !important;
    font-weight: normal !important;
    font-variant: normal !important;
    text-transform: none !important;
    speak: none;
    line-height: 1;
    position: relative;
    font-size: 30px;
    top: 10px;
    padding-left: 2px;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
  }
}

[data-icon="history"]::before {
  content: "\E000";
}

[data-icon="tasks"]::before {
  content: "\E001";
}

[data-icon="thumbs-up"]::before {
  content: "\E002";
}

// Base
* {
  @include box-sizing(border-box);
  margin: 0;
  padding: 0;
}

html,
body {
  background-color: $color-dark;
  color: $color-dark;
  font-family: $font-family-base;
  font-size: $font-size-base;
  height: 100%;
  line-height: 1.5;
  overflow-x: hidden;
}

h1 {
  color: $block-background;
  font-weight: 100;
  letter-spacing: 1px;
  margin: 0 0 0.5em;
  text-transform: uppercase;
}

small {
  color: $color-mid;
  font-size: $font-size-small;
}

[data-fit-text] {
  text-transform: uppercase;
}

input {
  @include appearance(none);
  background-color: transparent;
  border-radius: $input-height / 2;
  border: 0;
  color: $color-dark;
  display: block;
  font-weight: bold;
  line-height: 2em;
  padding: 0.5em;
  text-align: center;
  width: 100%;

  @include placeholder {
    color: $color-light;
  }

  &:focus {
    background-color: white;
    outline: none;
  }
}

ul,
ol {
  list-style: none;
}

// Layout
.wrapper {
  @include size(100vw 100vh);
  position: relative;
}

// Components
.block {
  @extend %container;
  padding: 1em;
  position: relative;
  z-index: 1;

  @include breakpoint-small {
    width: 100%;
  }
}

.block-header,
.block-list-item {
  background-color: $block-background;
  color: white;
  margin-bottom: 1px;
  padding: 0.5em 1em;
}

.block-header {
  border-radius: 5px 5px 0 0;
  font-weight: bold;
  margin-bottom: 4px;
}

.block-list-item {
  &:last-child {
    border-radius: 0 0 5px 5px;
  }

  time {
    color: black;
    font-size: $font-size-small;
    font-weight: bold;
    margin-right: 0.5em;
  }
}

.input-container {
  @include transition(all 0.1s ease-in-out);
  background-color: $block-background;
  border-radius: $input-height / 2;
  height: $input-height;
  margin: 0 auto;
  width: 100%;

  [data-icon] {
    display: none;
    color: black;
  }

  &.task-added {
    width: $input-height;
    border: 1px solid black;
    background-color: transparent;

    input {
      display: none;
    }

    [data-icon] {
      display: block;
    }
  }
}

.background {
  @include position(fixed, 0px 0 0 0px);
  @include size(100vw 100vh);
  background-repeat: no-repeat;
  background-size: cover;
}

.toggle {
  $size: 3em;
  @include position(absolute, auto 0 1em 50%);
  @include size($size);
  border-radius: $size / 2;
  border: 1px solid white;
  color: white;
  cursor: pointer;
  display: block;
  margin-left: -($size / 2);
  text-align: center;
  z-index: 1;

  [data-icon="history"] {
    display: block;
  }

  [data-icon="tasks"] {
    display: none;
  }

  &:hover {
    background-color: white;
    color: black;
  }

  .show-history & {
    bottom: auto;
    top: 1em;

    [data-icon="history"] {
      display: none;
    }

    [data-icon="tasks"] {
      display: block;
    }
  }
}

// Templates
.question {
  @extend %container;
  @include transform(translateY(-50%));
  text-align: center;
  top: 40%;

  .show-history & {
    display: none;
  }
}

.history {
  display: none;
  padding-top: 6em;

  .show-history & {
    display: block;
  }
}

